Fixed some dark mode bugs and sanity studio bugs

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,14 @@
             line-clamp: 3; 
     -webkit-box-orient: vertical;
 }
+
+.preview.dark {
+    --tw-text-opacity: 1;
+    color: rgb(243 244 246 / var(--tw-text-opacity));
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+            line-clamp: 3; 
+    -webkit-box-orient: vertical;
+}
